# doctown-v8

./: .gitignore  BUSINESS_MODEL.md  CLI_INTEGRATION.md  DOCPACK_SPEC.md  IMPLEMENTATION_PLAN.md  OLLAMA_SETUP.md  QUICKSTART.md  README.md  SEMANTIC_SEARCH.md  docker-compose.yml  start_web.sh  test_docpack_metadata.py  test_documenter.sh  test_list_functions.py  test_sample_file.py  test_semantic_grep.py  test_semantic_neighbors.py  test_semantic_search_and_read.py
cli/: Cargo.toml  EXAMPLES.md  QUICKSTART.md  README.md
cli/src/: main.rs
cli/src/commands/: ingest.rs  init.rs  inspect.rs  mod.rs  run.rs  validate.rs
documenter/: .dockerignore  .env.example  Dockerfile  embeddings.py  main.py  parser.py  requirements.txt  sandbox.py  tools.py
example.docpack/: docpack.json  tasks.json
example.docpack/files/: README.md  main.py  utils.py
example.docpack/index/: embeddings.json  graph.json  search.json
scripts/: build.sh  build_embeddings.sh  run-local.sh
website/: README.md  package-lock.json  package.json  vite.config.ts
website/src/lib/: wasm-zip.ts
website/src/routes/: +page.svelte
website/src/routes/api/docpack/[id]/: +server.ts
website/src/routes/api/docpack/[id]/file/: +server.ts
website/src/routes/api/docpack/[id]/query/: +server.ts
website/src/routes/api/docpacks/: +server.ts
website/src/routes/api/upload/: +server.ts
website/src/routes/commons/: +page.svelte
website/src/routes/docpack/[id]/: +page.svelte
website/wasm-parser/: Cargo.toml
website/wasm-parser/src/: lib.rs
